# comic-gan

./: README.md  package-lock.json  package.json  pyproject.toml
data/batman/: manifest.json
scripts/: download-comic-covers.js  get-comic-cover-urls.js
veqtor-stylegan/: README.md  dataset_tool.py  train.py
veqtor-stylegan/training/: misc.py  networks_stylegan.py  training_loop.py
