[tool.poetry]
name = "comic-gan"
version = "0.1.0"
description = ""
authors = ["Richard Foster <richard@rpf.me>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.18.5"
Pillow = "7.1.2"
tqdm = "4.46.1"
requests = "^2.23.0"
tensorflow = "1.15.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
